--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
