--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
